--- a/style.css
+++ b/style.css
@@ -28,6 +28,9 @@ body {
     align-items: center;
     margin-right: 10px;
 }
+.burger_menu{
+    display: none;
+}
 
 button{
     font-family: 'Raleway', sans-serif;    
@@ -71,6 +74,7 @@ p {
     margin: auto;
     padding: 0.5em; 
 }
+
 
 img {
     width: 100%;
