--- a/style.css
+++ b/style.css
@@ -28,9 +28,6 @@ body {
     align-items: center;
     margin-right: 10px;
 }
-.burger_menu{
-    display: none;
-}
 
 button{
     font-family: 'Raleway', sans-serif;    
@@ -47,6 +44,60 @@ button{
     background-color: rgb(255, 255, 255);
     color: rgb(216, 6, 6);
     cursor: pointer;
+}
+
+.burger_toggle_button{
+    position: fixed;
+    top: 10px;
+    right: 10px;
+    z-index: 30;
+    width: 70px;
+    height: 70px;
+    border-radius: 50%;
+    background-color: rgba(255, 255, 255, 0.5);
+    transition: 0.4s;
+}
+.burger_toggle_button span{
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+.burger_toggle_button span, .burger_toggle_button span::before, .burger_toggle_button span::after{
+    position: absolute;
+    width: 50px;
+    height: 3px;
+    background-color: #BB1E99;
+    transition: 0.4s;
+}
+.burger_toggle_button span::before{
+    content: '';
+    top: -12px;
+}
+.burger_toggle_button span::after{
+    content: '';
+    top:12px;
+}
+
+.button_menu_mobile{
+    position: fixed;
+    right:0;
+    top:100px;
+    background-color: grey;
+    padding: 20px;
+}
+
+.button_menu_mobile button{
+    display: block;
+    width:100%;
+    float:none;
+}
+
+.button_menu_mobile, .burger_toggle_button{
+    display: none;
+}
+
+.display_burger_menu_mobile{
+    display:none;
 }
 
 button:hover {
@@ -91,4 +142,17 @@ img {
     100% {
           background-position: 0% 50%;
     }
+}
+
+@media (max-width: 768px) {
+    .display_burger_menu_mobile{
+        display: block;
+    }
+    .button_menu{
+        display: none;
+    }
+    a.burger_toggle_button{
+        display: block;
+    }
+
 }
