--- a/style.css
+++ b/style.css
@@ -82,7 +82,7 @@ button{
     position: fixed;
     right:0;
     top:100px;
-    background-color: grey;
+    background-color: #2a2a2a;
     padding: 20px;
 }
 
